--- a/.github/workflows/generate-cicd-zip.yaml
+++ b/.github/workflows/generate-cicd-zip.yaml
@@ -1,9 +1,11 @@
 name: Generate CICD Zip
 on:
-  pull_request:
+  push:
+    branches:
+      - main
     paths:
-        - 'template/{{.input_root_dir}}/.github/workflows/{{.input_project_name}}**'
-        - 'template/{{.input_root_dir}}/.azure/devops-pipelines/{{.input_project_name}}**'
+      - 'template/{{.input_root_dir}}/.github/workflows/{{.input_project_name}}**'
+      - 'template/{{.input_root_dir}}/.azure/devops-pipelines/{{.input_project_name}}**'
 
 defaults:
   run:
@@ -11,21 +13,16 @@ defaults:
 
 
 jobs:
-  run-tests:
+  generate-zip:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Checkout PR
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr checkout ${{ github.event.pull_request.number }}
       - name: Generate CICD Zip
         run: |
           cp --parents .github/workflows/\{\{.input_project_name\}\}-* cicd/template
           cp --parents .azure/devops-pipelines/\{\{.input_project_name\}\}-* cicd/template
           tar -czvf cicd.tar.gz cicd
-      - name: Add Zip to Pull Request
+      - name: Commit Zip Back to Branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
